# PBRenamer

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODING.md  LICENSE  Makefile  README.md  environment.yml  pbrenamer.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: api.rst  changelog.rst  conf.py  index.rst  user_guide.rst
docs/_static/: custom.css
hooks/: pyi_rth_fonts.py
src/pbrenamer/: __init__.py  __main__.py  argparse_qt.py  i18n.py  settings.py  xdg.py
src/pbrenamer/core/: __init__.py  audio_meta.py  filetools.py  image_meta.py  meta.py  meta_common.py  replacement.py  undo.py  video_meta.py
src/pbrenamer/locale/: pbrenamer.pot
src/pbrenamer/locale/de/LC_MESSAGES/: pbrenamer.mo  pbrenamer.po
src/pbrenamer/locale/en/LC_MESSAGES/: pbrenamer.mo  pbrenamer.po
src/pbrenamer/locale/es/LC_MESSAGES/: pbrenamer.mo  pbrenamer.po
src/pbrenamer/locale/fr/LC_MESSAGES/: pbrenamer.mo  pbrenamer.po
src/pbrenamer/locale/it/LC_MESSAGES/: pbrenamer.mo  pbrenamer.po
src/pbrenamer/locale/ru/LC_MESSAGES/: pbrenamer.mo  pbrenamer.po
src/pbrenamer/locale/vi/LC_MESSAGES/: pbrenamer.mo  pbrenamer.po
src/pbrenamer/locale/zh_CN/LC_MESSAGES/: pbrenamer.mo  pbrenamer.po
src/pbrenamer/platform/: __init__.py  bookmarks.py  dirs.py  fs.py  locale.py
src/pbrenamer/resources/: __init__.py
src/pbrenamer/ui/: about_dialog.py  about_dialog.ui  about_dialog_ui.py  file_info_window.py  geometry_mixin.py  history_dialog.py  history_dialog.ui  history_dialog_ui.py  main_window.py  main_window.ui  main_window_ui.py  pattern_help.py  presets.py  settings_dialog.py  settings_dialog.ui  settings_dialog_ui.py  shortcuts_dialog.py  widgets.py  window_state.py
tests/: conftest.py  test_argparse_qt.py  test_filetools.py  test_headless.py  test_i18n.py  test_main_window.py  test_meta.py  test_meta_audio.py  test_meta_image.py  test_meta_video.py  test_platform_bookmarks.py  test_platform_dirs.py  test_platform_fs.py  test_platform_locale.py  test_presets.py  test_replacement.py  test_resources.py  test_settings.py  test_ui_dialogs.py  test_undo.py  test_window_state.py
tools/: bump_version.py  extract_changelog.py  extract_ui_strings.py  fix_po_files.py  fix_pot_date.py  git_version.sh  po_check.py
