[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pbrenamer"
version = "1.0.0"
description = "A graphical batch file renaming utility"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Marcel Spock", email = "mrspock@cardolan.net" }]
keywords = ["renamer", "batch", "files", "gui", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Topic :: Desktop Environment :: File Managers",
]
requires-python = ">=3.12"
dependencies = ["PySide6>=6.6.0"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=3.7",
    "pytest>=8",
    "pytest-qt>=4",
    "pytest-cov>=5",
    "sphinx>=7",
    "sphinx-rtd-theme>=2",
    "sphinx-autobuild>=2024",
]

[project.scripts]
pbrenamer = "pbrenamer.__main__:main"

[project.urls]
Homepage   = "https://github.com/ppoilbarbe/PBRenamer"
Repository = "https://github.com/ppoilbarbe/PBRenamer"
Issues     = "https://github.com/ppoilbarbe/PBRenamer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pbrenamer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = ["--cov=pbrenamer", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length    = 88
target-version = "py312"
src            = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle       — style errors (indentation, whitespace…)
    "F",   # pyflakes          — undefined names, unused imports…
    "W",   # pycodestyle       — style warnings
    "I",   # isort             — import ordering
    "N",   # pep8-naming       — naming conventions
    "UP",  # pyupgrade         — modernise syntax to target Python version
]
extend-select = [
    "PGH", # pygrep-hooks      — grep-based checks (no bare `type: ignore`, deprecated calls…)
    "BLE", # flake8-blind-except — forbid bare `except Exception` without re-raise
]

[tool.ruff.lint.per-file-ignores]
# _() is installed into builtins by gettext at runtime — not a real F821
"src/pbrenamer/ui/main_window.py"     = ["F821"]
"src/pbrenamer/ui/settings_dialog.py" = ["F821"]
"src/pbrenamer/ui/pattern_help.py"    = ["F821"]

[tool.ruff.format]
# Black-compatible defaults (double quotes, trailing commas, magic trailing comma)
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "lf"
